--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,15 +105,25 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Run security scan
-      uses: securecodewarrior/github-action-add-sarif@v1
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
       with:
-        sarif-file: 'security-scan-results.sarif'
+        python-version: '3.11'
+
+    - name: Install security tools
+      run: |
+        python -m pip install --upgrade pip
+        pip install safety bandit
+
+    - name: Run security scan with Bandit
+      run: |
+        bandit -r app/ -f json -o bandit-report.json || true
+        bandit -r app/ || true
 
     - name: Run dependency check
       run: |
-        pip install safety
         safety check --json --output safety-report.json || true
+        safety check || true
 
   demo-test:
     runs-on: ubuntu-latest
@@ -319,6 +329,3 @@ jobs:
       run: |
         echo "Deploying to production environment..."
         # Add production deployment commands here
-
-
-
